# Undangin

./: README.md  app.py  helpers.py  invitation.db  pyproject.toml  requirements.txt
static/: styles.css
templates/: attendees.html  create.html  detail.html  edit.html  editing.html  index.html  layout.html  layoutAuthed.html  login.html  register.html  send.html  upload.html
templates/Wedding1/: template.html  templatescript.js  templatestyle.css
